Lab 2: Implement JPA entities, PostgreSQL integration, and Transactional logic